
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:columnCount="4"
    android:rowCount="6"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_game_activity">
<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="347dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:columnCount="4"
    android:rowCount="3"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_game_activity">

    <!-- IA 1 -->

    <TextView android:id="@+id/IA1InspectionLbl"
        android:text="@string/ia1_label"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="25"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <ImageView android:id="@+id/IA1InspectionCard1"
        android:src="@drawable/truck_card"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_height="103dp"
        android:layout_columnWeight="25"
        android:layout_gravity="center"/>

    <ImageView android:id="@+id/IA1InspectionCard2"
        android:src="@drawable/truck_card"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="25"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <ImageView android:id="@+id/IA1InspectionCard3"
        android:src="@drawable/truck_card"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_columnWeight="25"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <!-- IA 2 -->

    <TextView android:id="@+id/IA2InspectionLbl"
        android:text="@string/ia2_label"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <ImageView android:id="@+id/IA2InspectionCard1"
        android:src="@drawable/truck_card"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <ImageView android:id="@+id/IA2InspectionCard2"
        android:src="@drawable/truck_card"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <ImageView android:id="@+id/IA2InspectionCard3"
        android:src="@drawable/truck_card"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <!-- IA 3 -->

    <TextView android:id="@+id/IA3InspectionLbl"
        android:text="@string/ia3_label"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <ImageView android:id="@+id/IA3InspectionCard1"
        android:src="@drawable/truck_card"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <ImageView android:id="@+id/IA3InspectionCard2"
        android:src="@drawable/truck_card"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_height="103dp"
        android:layout_gravity="center" />

    <ImageView android:id="@+id/IA3InspectionCard3"
        android:src="@drawable/truck_card"
        android:layout_column="3"
        android:layout_row="2"
        android:layout_height="103dp"
        android:layout_gravity="center" />



    </GridLayout>

    <!-- RESULT -->


    <TextView android:id="@+id/ResultLbl"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:background="#FFFF"
        android:layout_width="match_parent"
        android:typeface="monospace"/>

    <!-- NEXT BUTTON -->

    <ImageButton android:id="@+id/BtnNext"
        android:src="@drawable/next"
        style="?android:borderlessButtonStyle"
        android:layout_gravity="left"
        android:layout_width="350dp"
        android:layout_height="125dp" />

    </LinearLayout>